--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,10 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="100sp"
         android:layout_marginRight="50dp"
-        android:backgroundHint="@color/purple"
-        android:backgroundTint="@color/purple"
+        android:background="@drawable/button1"
         android:text="@string/youtubeButton"
         android:textAllCaps="false" />
+
 
     <Button
         android:id="@+id/ownMusicButton"
@@ -39,7 +39,7 @@
         android:layout_marginTop="20sp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:backgroundTint="@color/purple"
+        android:background="@drawable/button1"
         android:text="@string/ownMusicButton"
         android:textAllCaps="false"/>
 </RelativeLayout>
