--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/youtubeMusicButton"
-        android:layout_marginTop="20sp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="20sp"
         android:layout_marginRight="50dp"
         android:background="@drawable/button1"
         android:text="@string/ownMusicButton"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/requestPermissionButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ownMusicButton"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50sp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/button1"
+        android:text="@string/permissionRequestButton"
+        android:textAllCaps="false" />
 </RelativeLayout>
