--- a/app/src/main/res/layout/music_list_background.xml
+++ b/app/src/main/res/layout/music_list_background.xml
@@ -31,6 +31,14 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="@color/purple"
             android:textSize="12dp" />
+
+        <Button
+            android:id="@+id/songFromOwnSongsList"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="350dp"
+            android:layout_height="30dp"
+            android:background="@drawable/plus"
+            android:textAllCaps="false" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
