--- a/app/src/main/res/layout/activity_own_music.xml
+++ b/app/src/main/res/layout/activity_own_music.xml
@@ -11,18 +11,17 @@
         android:id="@+id/listViewSong"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/searchOwnMusic"
         android:background="@color/background" />
 
-    <EditText
-        android:id="@+id/searchOwnMusic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/visor"
-        android:fontFamily="@font/monofett"
-        android:hint="@string/ownMusicSearchText"
-        android:textColor="@color/purple"
-        android:textColorHint="@color/purple"
-        android:textSize="30sp" />
+<!--    <EditText-->
+<!--        android:id="@+id/searchOwnMusic"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:backgroundTint="@color/visor"-->
+<!--        android:fontFamily="@font/monofett"-->
+<!--        android:hint="@string/ownMusicSearchText"-->
+<!--        android:textColor="@color/purple"-->
+<!--        android:textColorHint="@color/purple"-->
+<!--        android:textSize="30sp" />-->
 
 </RelativeLayout>
