--- a/app/src/main/res/layout/activity_check_song.xml
+++ b/app/src/main/res/layout/activity_check_song.xml
@@ -26,7 +26,20 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_height="280dp">
+            <Button
+                android:id="@+id/addSongButton"
+                android:layout_marginBottom="8dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/add_music_button" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="60dp">
+
             <SeekBar
                 android:id="@+id/seekBar"
                 android:layout_centerInParent="true"
@@ -87,17 +100,17 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/pause_button"></Button>
 
-<!--            <com.gauravk.audiovisualizer.visualizer.BlastVisualizer-->
-<!--                xmlns:custom="http://schemas.android.com/apk/res-auto"-->
-<!--                android:id="@+id/blast"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="70dp"-->
-<!--                android:layout_alignParentBottom="true"-->
-<!--                custom:avDensity="0.5"-->
-<!--                custom:avType="outline"-->
-<!--                custom:avWidth="4dp"-->
-<!--                custom:avColor="@color/visor"-->
-<!--                custom:avSpeed="normal"/>-->
+            <com.gauravk.audiovisualizer.visualizer.BlastVisualizer
+                xmlns:custom="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/blast"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_alignParentBottom="true"
+                custom:avDensity="0.5"
+                custom:avType="outline"
+                custom:avWidth="4dp"
+                custom:avColor="@color/visor"
+                custom:avSpeed="normal"/>
 
         </RelativeLayout>
     </LinearLayout>
