--- a/app/src/main/res/layout/activity_own_music.xml
+++ b/app/src/main/res/layout/activity_own_music.xml
@@ -7,10 +7,10 @@
     android:background="@color/background"
     tools:context=".ownMusic">
 
-    <EditText
+    <SearchView
         android:id="@+id/searchOwnMusic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/visor"
         android:backgroundTint="@color/purple"
         android:hint="@string/SearchText" />
