--- a/app/src/main/res/layout/activity_own_music.xml
+++ b/app/src/main/res/layout/activity_own_music.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ownMusic">
+    tools:context=".OwnMusic">
 
     <SearchView
         android:id="@+id/searchOwnMusic"
