--- a/app/src/main/res/layout/activity_record_own_song.xml
+++ b/app/src/main/res/layout/activity_record_own_song.xml
@@ -38,31 +38,27 @@
             android:layout_width="match_parent"
             android:layout_height="150dp">
 
-            <Button
+            <ImageView
                 android:id="@+id/startRecordButton"
-                android:layout_width="120dp"
+                android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/button1"
-                android:text="@string/startRecordButton"
-                tools:ignore="DuplicateClickableBoundsCheck"></Button>
+                android:background="@drawable/record_button"/>
 
-            <Button
+            <ImageView
                 android:id="@+id/resetRecord"
-                android:layout_width="120dp"
+                android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
-                android:text="@string/resetButton"
-                android:background="@drawable/button1"></Button>
+                android:background="@drawable/reset_button"/>
 
-            <Button
+            <ImageView
                 android:id="@+id/finishRecord"
-                android:layout_width="120dp"
+                android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="80dp"
-                android:background="@drawable/button1"
-                android:text="@string/finishRecordButton"></Button>
+                android:background="@drawable/finish_record_button" />
 
 
         </RelativeLayout>
