--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,9 +25,10 @@
         android:layout_marginTop="100dp"
         android:backgroundTint="@color/purple"
         android:hint="@string/emailTxt"
-        android:textColorHint="@color/purple"
         android:textColor="@color/purple"
-        android:textSize="24dp" />
+        android:textColorHint="@color/purple"
+        android:inputType="textEmailAddress"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/passwordTxt"
@@ -35,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/emailTxt"
         android:hint="@string/passwordTxt"
-        android:textSize="24dp"
+        android:textSize="24sp"
+        android:inputType="textPassword"
         android:textColor="@color/purple"
         android:textColorHint="@color/purple"
         android:backgroundTint="@color/purple"
