--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="visor">#00A1AA</color>
     <color name="purple">#7B3F92</color>
     <color name="background">#191919</color>
+    <color name="light_purple">#BBA5CC</color>
 </resources>
