--- a/app/src/main/res/drawable/animetedbackground1.xml
+++ b/app/src/main/res/drawable/animetedbackground1.xml
@@ -2,6 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
+            <corners
+                android:radius="20dp"/>
             <gradient
                 android:angle="225"
                 android:startColor="@color/background"
@@ -9,4 +11,5 @@
                 />
         </shape>
     </item>
+
 </selector>
