--- a/app/src/main/res/drawable/animetedbackground2.xml
+++ b/app/src/main/res/drawable/animetedbackground2.xml
@@ -2,9 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
+            <corners
+                android:radius="20dp"/>
             <gradient
                 android:angle="225"
-                android:startColor="@color/purple"
+                android:startColor="@color/white"
                 android:endColor="@color/purple_200"
                 />
         </shape>
