--- a/app/src/main/res/layout/activity_record_own_song.xml
+++ b/app/src/main/res/layout/activity_record_own_song.xml
@@ -27,7 +27,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="200dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/purple"
+                android:background="@drawable/button1"
                 android:text="@string/ownSongName"
                 android:textAlignment="center"
                 android:textColor="@color/white"
