--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,12 +60,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ownMusicButton"
-        android:layout_marginTop="150dp"
         android:layout_marginLeft="80dp"
-        android:textSize="16dp"
+        android:layout_marginTop="150dp"
         android:text="@string/loginTxt"
         android:textAlignment="center"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/registerTxt"
@@ -77,6 +77,6 @@
         android:layout_marginTop="150dp"
         android:text="@string/registerTxt"
         android:textColor="@color/white"
-        android:textSize="16dp" />
+        android:textSize="16sp" />
 
 </RelativeLayout>
