--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="100sp"
         android:layout_marginRight="50dp"
         android:background="@drawable/button1"
-        android:text="@string/youtubeButton"
+        android:text="@string/alreadyRecordTracks"
         android:textAllCaps="false" />
 
 
