--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,4 +55,27 @@
         android:text="@string/permissionRequestButton"
         android:textAllCaps="false" />
 
+    <TextView
+        android:id="@+id/loginTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/requestPermissionButton"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="70dp"
+        android:text="@string/loginTxt"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/registerTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/requestPermissionButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="70dp"
+        android:text="@string/registerTxt"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
+
 </RelativeLayout>
