--- a/app/src/main/res/layout/activity_check_final_song.xml
+++ b/app/src/main/res/layout/activity_check_final_song.xml
@@ -69,7 +69,7 @@
         android:id="@+id/goBackButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button1"
+        android:background="@drawable/default_button"
         android:layout_marginRight="100dp"
         android:layout_marginLeft="100dp"
         android:text="@string/goBackButton" />
