--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,91 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:orientation="vertical"
     tools:context=".Login">
 
     <TextView
         android:id="@+id/appName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50sp"
         android:fontFamily="@font/monofett"
         android:text="@string/logo"
         android:textAlignment="center"
         android:textColor="@color/purple"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="40dp"/>
 
-    <EditText
-        android:id="@+id/emailTxt"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/appName"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="@color/purple"
-        android:hint="@string/emailTxt"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/purple"
-        android:textColorHint="@color/purple"
-        android:textSize="24sp" />
+        android:layout_marginBottom="350dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appName">
 
-    <EditText
-        android:id="@+id/passwordTxt"
+        <EditText
+            android:id="@+id/emailTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/appName"
+            android:backgroundTint="@color/purple"
+            android:hint="@string/emailTxt"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/background"
+            android:textSize="20sp"
+            android:background="@drawable/default_button"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/emailTxt"
-        android:hint="@string/passwordTxt"
-        android:textSize="24sp"
-        android:inputType="textPassword"
-        android:textColorHint="@color/purple"
-        android:backgroundTint="@color/purple"
-        android:textColor="@color/purple"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginBottom="250dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        app:passwordToggleEnabled="true">
+
+        <EditText
+            android:id="@+id/passwordTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/emailTxt"
+            android:backgroundTint="@color/purple"
+            android:hint="@string/passwordTxt"
+            android:inputType="textPassword"
+            android:textColor="@color/background"
+            android:textSize="20sp"
+            android:background="@drawable/default_button"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/passwordTxt"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="50dp"
-        android:layout_marginRight="50dp"
-        android:background="@drawable/button1"
-        android:text="@string/loginTxt" />
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="150dp"
+        android:background="@drawable/default_button"
+        android:text="@string/loginTxt"
+        android:textColor="@color/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
     <TextView
         android:id="@+id/registerButton"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_below="@id/loginButton"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginBottom="40dp"
         android:text="@string/registerTxt"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <TextView
         android:id="@+id/forgetPasswordButton"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_below="@id/loginButton"
-        android:layout_marginLeft="240dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginRight="50dp"
         android:text="@string/forgetPasswordTxt"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:visibility="gone"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
