--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="100sp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/button1"
+        android:background="@drawable/default_button"
         android:text="@string/alreadyRecordTracks"
         android:textAllCaps="false" />
 
@@ -39,7 +39,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20sp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/button1"
+        android:background="@drawable/default_button"
         android:text="@string/ownMusicButton"
         android:textAllCaps="false" />
 
@@ -51,7 +51,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50sp"
         android:layout_marginRight="50dp"
-        android:background="@drawable/button1"
+        android:background="@drawable/default_button"
         android:text="@string/permissionRequestButton"
         android:textAllCaps="false" />
 
