--- a/app/src/main/res/layout/activity_listen_final_song.xml
+++ b/app/src/main/res/layout/activity_listen_final_song.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:layout_marginBottom="30dp"
         android:id="@+id/songNameTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
