--- a/app/src/main/res/layout/permission_dialog.xml
+++ b/app/src/main/res/layout/permission_dialog.xml
@@ -27,7 +27,7 @@
             android:textColor="@color/background"
             android:layout_marginTop="25dp"
             android:layout_marginLeft="5dp"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 
@@ -44,12 +44,12 @@
 
     <TextView
         android:id="@+id/dialogHead"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="30dp"
         android:fontFamily="@font/monofett"
         android:text="@string/dialogHeader"
         android:textAlignment="center"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/visor"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
