--- a/app/src/main/res/layout/internet_connection_dialog.xml
+++ b/app/src/main/res/layout/internet_connection_dialog.xml
@@ -58,10 +58,9 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/email_picture"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:background="@drawable/wifi_icon"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
