--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:textSize="40sp" />
 
     <Button
-        android:id="@+id/youtubeMusicButton"
+        android:id="@+id/alreadyRecordedSongs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
@@ -35,7 +35,7 @@
         android:id="@+id/ownMusicButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/youtubeMusicButton"
+        android:layout_below="@+id/alreadyRecordedSongs"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20sp"
         android:layout_marginRight="50dp"
