--- a/app/src/main/res/layout/activity_listen_final_song.xml
+++ b/app/src/main/res/layout/activity_listen_final_song.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListenFinalSong"
-    android:background="@color/background">
+    android:background="@drawable/background_default">
 
     <ImageView
         android:id="@+id/mergeImageView"
@@ -68,6 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notVisibleButton"
         android:layout_marginTop="50dp"
+        android:textColor="@color/background"
         android:background="@drawable/default_button"
         android:text="@string/goBackButton"/>
 
