--- a/app/src/main/res/values-uk/colors.xml
+++ b/app/src/main/res/values-uk/colors.xml
@@ -10,5 +10,7 @@
     <color name="visor">#00A1AA</color>
     <color name="purple">#7B3F92</color>
     <color name="background">#191919</color>
+    <color name="gray">#25262a</color>
     <color name="light_purple">#BBA5CC</color>
+    <color name="black_visor">#00757b</color>
 </resources>
