--- a/app/src/main/res/drawable/background_default.xml
+++ b/app/src/main/res/drawable/background_default.xml
@@ -2,12 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners
-                android:radius="20dp"/>
+
             <gradient
-                android:angle="225"
+                android:angle="65"
                 android:startColor="@color/background"
-                android:endColor="@color/black"
+                android:endColor="@color/gray"
                 />
         </shape>
     </item>
