--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -2,7 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/visor"/>
+            <gradient
+                android:angle="80"
+                android:startColor="@color/visor"
+                android:endColor="@color/black_visor"/>
+
             <corners android:radius="20dp"/>
             <stroke android:width="3dp"
                 android:color="@color/white"/>
