--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForgetPassword"
-    android:background="@color/background"
+    android:background="@drawable/background_default"
     android:orientation="vertical">
 
     <TextView
