--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@drawable/background_default"
     tools:context=".MainActivity">
 
     <TextView
@@ -28,6 +28,7 @@
         android:layout_marginRight="50dp"
         android:background="@drawable/default_button"
         android:text="@string/alreadyRecordTracks"
+        android:textColor="@color/background"
         android:textAllCaps="false" />
 
 
@@ -40,6 +41,7 @@
         android:layout_marginTop="20sp"
         android:layout_marginRight="50dp"
         android:background="@drawable/default_button"
+        android:textColor="@color/background"
         android:text="@string/ownMusicButton"
         android:textAllCaps="false" />
 
@@ -52,6 +54,7 @@
         android:layout_marginTop="50sp"
         android:layout_marginRight="50dp"
         android:background="@drawable/default_button"
+        android:textColor="@color/background"
         android:text="@string/permissionRequestButton"
         android:textAllCaps="false" />
 
