--- a/app/src/main/res/drawable/default_button.xml
+++ b/app/src/main/res/drawable/default_button.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-        <solid android:color="@color/purple"/>
+            <gradient
+                android:angle="65"
+                android:startColor="@color/purple"
+                android:endColor="@color/black_purple"/>
             <corners android:radius="150dp"/>
         </shape>
     </item>
