--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="gray">#25262a</color>
     <color name="light_purple">#BBA5CC</color>
     <color name="black_visor">#00757b</color>
+    <color name="black_purple">#8a47a4</color>
 </resources>
